clock: Do not miss seconds when displaying seconds

The timeout we were using is expecting a 1ms resolution; usually, timers
have a 10ms, though, so we could sometimes simply skip a second, which
is bad. Add 15ms to the timeout to avoid that.

https://bugzilla.gnome.org/show_bug.cgi?id=585668